Added star section(html)

--- a/menuhtml.html
+++ b/menuhtml.html
@@ -843,6 +843,15 @@
             </div>
             <div class="f_ani_rev">
                 <div class="rev_us"><i class="fa-regular fa-face-smile-beam"></i> Rate Us</div>
+                <div class="rev_str">
+                    <div id="str_conatainer">
+                        <button class="str" id = "str0" onmousemove="hlgt_prev_star(event,0)" onclick="rev_modal(0)"><i class="fa-regular fa-star"></i></button>
+                        <button class="str" id = "str1" onmousemove="hlgt_prev_star(event,1)" onclick="rev_modal(1)"><i class="fa-regular fa-star"></i></button>
+                        <button class="str" id = "str2" onmousemove="hlgt_prev_star(event,2)" onclick="rev_modal(2)"><i class="fa-regular fa-star"></i></button>
+                        <button class="str" id = "str3" onmousemove="hlgt_prev_star(event,3)" onclick="rev_modal(3)"><i class="fa-regular fa-star"></i></button>
+                        <button class="str" id = "str4" onmousemove="hlgt_prev_star(event,4)" onclick="rev_modal(4)"><i class="fa-regular fa-star"></i></button>
+                    </div>
+                </div>
             </div>
         </div>
         <br><br><br><br>
