--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <br>
 
     <div class="introshow1">
-        <div class="D_img"><img src="DoughImg/IntroImg.webp" alt="..." width="689px"></div>
+        <div class="D_img"><img src="DoughImg/IntroImg.webp" alt="..." width="100%"></div>
         <div class="D_img_text">
             <div class="D_img_title">About US</div>
             <div class="D_img_cont">
