--- a/index.html
+++ b/index.html
@@ -244,6 +244,14 @@
         </div>
         <br><br><br><br>
     </div>
+    <div class="review_modal">
+        <div class="rev_title">Please tell us your experience</div>
+        <textarea class="usr_rev" placeholder="Enter here"></textarea>
+        <div class="sub_btn">
+            <button class="rev_btn" onclick="sub_feedback()">Submit</button>
+            <button class="rev_btn" type="reset" onclick="rem_feedback()">Cancel</button>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
