Added Feedback section(HTML)

--- a/menuhtml.html
+++ b/menuhtml.html
@@ -856,6 +856,14 @@
         </div>
         <br><br><br><br>
     </div>
+    <div class="review_modal">
+        <div class="rev_title">Please tell us your experience</div>
+        <textarea class="usr_rev" placeholder="Enter here"></textarea>
+        <div class="sub_btn">
+            <button class="rev_btn" onclick="sub_feedback()">Submit</button>
+            <button class="rev_btn" type="reset" onclick="rem_feedback()">Cancel</button>
+        </div>
+    </div>
     <script src="menujs.js"></script>
     <script src="menujs2.js"></script>
 </body>
