--- a/SignUphtml.html
+++ b/SignUphtml.html
@@ -8,51 +8,40 @@
     <title>SignUp | DoughNuts</title>
 </head>
 <body>
-    <div class="container">
-        <div class="doughnuts">
-            <div class="letter">D</div>
-            <div class="letter">o</div>
-            <div class="letter">u</div>
-            <div class="letter">g</div>
-            <div class="letter">h</div>
-            <div class="letter">n</div>
-            <div class="letter">u</div>
-            <div class="letter">t</div>
-            <div class="letter">s</div>
+    <br><br><br><br><br><br>
+    <div class="signup_container">
+        <div class="signup_cont">
+            <div class="signup_wlcm1">Welcome to DoughNuts</div>
+            <div class="signup_wlcm2">Create your account</div>
+
+            <div class="signup_cred">
+                <div class="cred_title">First name</div>
+                <input type="text" class="cred_entry" id="signup_fn">
+            </div>
+            <div class="signup_cred">
+                <div class="cred_title">Last name</div>
+                <input type="text" class="cred_entry" id="">
+            </div>
+            <div class="signup_cred">
+                <div class="cred_title">Username</div>
+                <input type="text" class="cred_entry" id="signup_usrname">
+            </div>
+            <div class="signup_cred">
+                <div class="cred_title">New Password</div>
+                <input type="password" class="cred_entry" id="signup_npass">
+            </div>
+            <div class="signup_cred">
+                <div class="cred_title">Confirm Password</div>
+                <input type="password" class="cred_entry" id="signup_cpass">
+            </div>
+
+            <div class="signup_btn">
+                <button class="signup" onclick="register_acc()">SignUp</button>
+            </div>
         </div>
-
-        <div class="signup_ctnt">
-            <div class="s_title">Sign up</div>
-            <div class="fn_ln">
-                <div class="fn">
-                    <div class="name">First Name</div>
-                    <div class="name_inp"><input class="inp"type="text"></div>
-                </div>
-                <div class="ln">
-                    <div class="name">Last Name</div>
-                    <div class="name_inp"><input class="inp"type="text"></div>
-                </div>
-            </div>
-            <div class="usr_name">
-                <div class="name">Username</div>
-                <div class="name_inp"><input class="inp" type="text" id="usrName"></div>
-            </div>
-            <div class="pass">
-                <div class="name">Password</div>
-                <div class="name_inp"><input class="inp" type="password" id="pswrd"></div>
-            </div>
-            <div class="cnf_pass">
-                <div class="name">Confirm Password</div>
-                <div class="name_inp"><input class="inp" type="password"></div>
-            </div>
-            <div class="address">
-                <div class="name">Current Address</div>
-                <div class="name_inp"><input class="inp" type="text"></div>
-            </div>
-
-            <div class="sub_btn">
-                <div class="signUp"><button class="sign_btn" onclick="sbmtDetails()"><a href="index.html">Sign Up</a></button></div>
-                <div class="cans"><button class="sign_btn"><a href="index.html">Cancel</a></button></div>
+        <div class="signup_img">
+            <div class="dark"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <div class="signup_brand">DoughNuts</div>
             </div>
         </div>
     </div>
