Added address section in order modal

--- a/menuhtml.html
+++ b/menuhtml.html
@@ -816,6 +816,12 @@
                 </div>
             </div>
         </div>
+        <div class="in_accNum">
+            <div class="acc_Num">Current Address</div>
+            <div class="in_acc">
+                <input type="text" id="c_address">
+            </div>
+        </div>
         <div class="odr_disc">
             <div class="cnf_order">
                 <button id="conf_odr">Confirm Order</button>
